--- a/Views/Reporting/FlexiPayReport.cshtml
+++ b/Views/Reporting/FlexiPayReport.cshtml
@@ -37,10 +37,10 @@
 <div style="clear: both;"></div>
 
 <div id="flexibuyreport_buttons_position">
-    <button class="generateButton generateButton_flexipay" id="GenerateButton" onclick="GenerateFlexiPayReportReport()">Generate Report</button>
+    <button class="generateButton generateButton_dualbtn" id="GenerateButton" onclick="GenerateFlexiPayReportReport()">Generate Report</button>
     <a id="dlink" style="display:none;"></a>
     <div class="" id="ExportDiv">
-        <input class="generateButton generateButton_flexipay" type="button" onclick="tableToExcel('DisplayTable', 'Flexi Buy Report', '.xls')" value="Export to Excel">
+        <input class="generateButton generateButton_dualbtn" type="button" onclick="tableToExcel('DisplayTable', 'Flexi Buy Report', '.xls')" value="Export to Excel">
     </div>
     <div class="InvisibleDiv errorDiv" id="ErrorDiv">
         Please compleate required information
