--- a/Views/Reporting/HighestPnPSpend.cshtml
+++ b/Views/Reporting/HighestPnPSpend.cshtml
@@ -11,7 +11,7 @@
     <br/>
     <br />
 <div class="highest_pp_btn">
-    <button class="generateButton_highpp" id="GenerateButtonhighpp" onclick="GeneratePnPReport()">Generate Report</button>
+    <button class="generateButton_onebtn" id="GenerateButton" onclick="GeneratePnPReport()">Generate Report</button>
 </div>
     <br />
     <br />
