--- a/Views/Reporting/SalesOverviewReport.cshtml
+++ b/Views/Reporting/SalesOverviewReport.cshtml
@@ -19,7 +19,7 @@
 
     @Html.DropDownList("CurrencyType")
 </div>
-     <div class="salesoverview_btn"><button class="generateButton_salesoverview" id="GenerateButton" onclick="GenerateSalesOverviewReport()">Generate Report</button></div>
+     <div class="salesoverview_btn"><button class="generateButton_onebtn" id="GenerateButton" onclick="GenerateSalesOverviewReport()">Generate Report</button></div>
         <a id="dlink" style="display:none;"></a>
 
         <div class="InvisibleDiv errorDiv" id="ErrorDiv">
