first two list items

--- a/Views/Overview/Index.cshtml
+++ b/Views/Overview/Index.cshtml
@@ -51,6 +51,11 @@
     <canvas id="PieNumberOfEachPostageType7Days" width="300" height="300"></canvas>
     <div id="NumberOfEachPostageType7DaysLegend" class="chart-legend"></div>
 </div>
+<div class="ChartDiv">
+    <h4>Freedom Members</h4>
+    <canvas id="PieFreedomMembers" width="300" height="300"></canvas>
+    <div id="FreedomMembersLegend" class="chart-legend"></div>
+</div>
 
     @section scripts {
         @Scripts.Render("~/Scripts/Chart.js")
