--- a/Views/PolSheet/index.cshtml
+++ b/Views/PolSheet/index.cshtml
@@ -9,8 +9,13 @@
      {
         <input type="date" class="dateInput" id="startDate" name="startDate" min="2015-08-27" />
         <input type="time" class="timeInput" id="startTime" name="startTime" /><br/>
-        <input type="checkbox" name="CheckPrepNotes" value="CheckPrepNotes" id="prepNotes" /><span id="checkPolSpan">Check Prep Notes</span>
-        <input type="submit" value="Generate Pol Sheet" id="polButton" />
+
+        <div class="prep_notes_checkbox">
+            <input type="checkbox" name="CheckPrepNotes" value="CheckPrepNotes" id="prepNotes" /><span id="checkPolSpan">Check Prep Notes</span>
+        </div>
+
+
+         <input type="submit" value="Generate Pol Sheet" id="polButton" />
      }
     }
 </div>
