--- a/Views/Reporting/FlexiPayReport.cshtml
+++ b/Views/Reporting/FlexiPayReport.cshtml
@@ -36,7 +36,7 @@
 
 <div style="clear: both;"></div>
 
-<div id="flexibuyreport_buttons_position">
+<div id="dualbtn_position">
     <button class="generateButton generateButton_dualbtn" id="GenerateButton" onclick="GenerateFlexiPayReportReport()">Generate Report</button>
     <a id="dlink" style="display:none;"></a>
     <div class="" id="ExportDiv">
@@ -49,7 +49,7 @@
     <div class="InvisibleDiv" id="LoadingDiv">
         <img src="~/Content/Images/ajax-loader.gif" />
     </div>
-</div><!-- flexibuyreport_buttons_position -->
+</div><!-- dualbtn_position -->
 
 
 <div style="clear: both;"></div>
