--- a/Content/Site.css
+++ b/Content/Site.css
@@ -602,7 +602,7 @@ div#SelectionDiv {
 
 #prepNotes {
     width: 100%;
-    height: 100px;
+    height: 30px;
     font-size: 25px;
 }
 
@@ -783,7 +783,29 @@ input.dateInput  {
 
     /* ########### :END: DASHBOARD ########### */
 
-    /* ########### FLEXIBUY REPORT ########### */
+    /* ########### JEROME CSS ########### */
+
+
+       .generateButton_onebtn {
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    text-transform: uppercase;
+    line-height: 34px;
+    display: inline-block;
+    color: #fff;
+    background-color: #ed137d;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    padding: 0 10px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    float: left;
+    width: 100%;
+   }
+
+     /*------- FLEXIBUY REPORT -------*/  
 
     #startDate {
     width: 47%;
@@ -803,10 +825,9 @@ input.dateInput  {
     width:100%
    }
 
-    /* ########### :END: FLEXIBUY REPORT ########### */
+    /*------- :END: FLEXIBUY REPORT -------*/  
 
-
-    /* ########### SALES OVERVIEW ########### */
+    /*------- SALES OVERVIEW -------*/  
 
    .day_currency_select {
     height: 50px;
@@ -849,32 +870,9 @@ input.dateInput  {
     min-width: 0px!important;
 }
 
-   /* ########### :END: SALES OVERVIEW ########### */
+   /*------- :END: SALES OVERVIEW -------*/  
 
-    /* ########### JEROME CSS ########### */
-
-
-       .generateButton_onebtn {
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    text-transform: uppercase;
-    line-height: 34px;
-    display: inline-block;
-    color: #fff;
-    background-color: #ed137d;
-    text-align: center;
-    cursor: pointer;
-    border: none;
-    padding: 0 10px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    float: left;
-    width: 100%;
-   }
-
-
-   /*------- HighestPnPSpend  -------*/  
+   /*------- HIGHEST P&P SPEND -------*/  
 
            div#select_pos {
     margin-bottom: 20px;
@@ -911,15 +909,23 @@ input.dateInput  {
     padding: 0px 0px!important;
      }
 
-   /*------- :END: HighestPnPSpend  -------*/  
+   /*------- :END: HIGHEST P&P SPEND -------*/  
 
-   /*------- PromotionalFreedomPnPSavings  -------*/  
+   /*------- PROMOTIONAL FREEDOM P&P SAVINGS -------*/  
 
        h2.promo_freedom_title {
     text-align: center;
    }
 
-   /*------- :END: PromotionalFreedomPnPSavings  -------*/  
+   /*------- :END: PROMOTIONAL FREEDOM P&P SAVINGS  -------*/  
+
+     .prep_notes_checkbox {
+    max-width: 200px;
+    padding: 5px;
+    border: 1px solid #ed137d;
+    /* padding: 3px 10px 10px 10px; */
+    background-color: #fff;
+  }
 
    /* ########### :END: JEROME CSS ########### */
 
@@ -954,7 +960,7 @@ input.dateInput  {
    /*------- :END: PROMOTIONAL FREEDOM P&P SAVINGS -------*/  
 
 
-     /*------- HighestPnPSpend -------*/  
+     /*------- HIGHEST P&P SPEND -------*/  
 
         div#select_pos {
     margin: 0 auto;
@@ -972,7 +978,7 @@ input.dateInput  {
     max-width: 300px;
     }
 
-    /*------- :END: HighestPnPSpend -------*/  
+    /*------- :END: HIGHEST P&P SPEND -------*/  
 
    /*------- DASHBOARD -------*/    
 
@@ -1012,9 +1018,9 @@ input.dateInput  {
 
   /*------- FLEXIBUY REPORT -------*/
 
-  #flexibuyreport_buttons_position {
+  #dualbtn_position {
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 10px;
     /* display: block; */
     width: 80%;
     max-width: 600px;
@@ -1032,6 +1038,7 @@ input.dateInput  {
     }
  
    /*------- :END: FLEXIBUY REPORT -------*/
+
 
   /* ########### :END: JEROME CSS ########### */
 
