--- a/Views/Reporting/BuyerGodReport.cshtml
+++ b/Views/Reporting/BuyerGodReport.cshtml
@@ -20,7 +20,7 @@
                 @Html.DropDownList("SuppliersAvailable")
             </div>
         </div>
-        <div id="DateDiv">
+        <div id="DateDiv2">
             <input type="date" class="dateInput" id="startDate" name="startDate" min="2015-08-27" value="@ViewBag.TodaysDate">
             <input type="date" class="dateInput" id="endDate" name="endDate" min="2015-08-27" value="@ViewBag.TodaysDate">
         </div>
