--- a/Views/CMS/HeaderAdvertCarousel.cshtml
+++ b/Views/CMS/HeaderAdvertCarousel.cshtml
@@ -4,43 +4,46 @@
 
 <h2>Header Advert Carousel</h2> 
 
-<p><button id="modal_open">Add New Carousel Item</button></p>
+<p><button id="modal_open">Create New Carousel Item</button></p>
 
 <div id="modal_wrapper">
     <div id="modal_window">
 
         <div style="text-align: right;"><a id="modal_close" href="#">close <b>X</b></a></div>
 
-        <form id="modal_feedback" method="POST" action="#" accept-charset="UTF-8">
+        <p>Complete the form below to send an email:</p>
+
+        <form id="modal_feedback" method="POST" action="SaveNewAdvertCarouselData" accept-charset="UTF-8">
             <p>
                 <label>
-                    Your Name<strong>*</strong><br>
-                    <input type="text" autofocus required size="48" name="name" value="">
-                </label>
-            </p>
-            <p>
-                <label>
-                    Email Address<strong>*</strong><br>
-                    <input type="email" required title="Please enter a valid email address" size="48" name="email" value="">
-                </label>
-            </p>
-            <p>
-                <label>
-                    Subject<br>
+                    Alt text<br>
                     <input type="text" size="48" name="subject" value="">
                 </label>
             </p>
             <p>
                 <label>
-                    Enquiry<strong>*</strong><br>
-                    <textarea required name="message" cols="48" rows="8"></textarea>
+                    Display Order<br>
+                    <input type="text" size="48" name="subject" value="">
                 </label>
             </p>
-            <p><input type="submit" name="feedbackForm" value="Send Message"></p>
+            <p>
+                <label>
+                    Display Start Date<br>
+                    <input type="text" size="48" name="subject" value="">
+                </label>
+            </p>
+            <p>
+                <label>
+                    Display End Date <strong>*</strong><br>
+                    <input type="text" size="48" name="subject" value="">
+                </label>
+            </p>
+            <p><input type="submit" name="feedbackForm" value="Save"></p>
         </form>
 
     </div> <!-- #modal_window -->
 </div> <!-- #modal_wrapper -->
+
 
 <div id="MainInfoDiv">
    <div class="HiddenDiv" id="dropdownNumbers"></div> 
