--- a/Views/Reporting/Index.cshtml
+++ b/Views/Reporting/Index.cshtml
@@ -27,7 +27,7 @@ please email <a href="mailto:it@hochanda.com?Subject=Firefox%20Installation%20Re
 </div>
 
 <div id="DivContainer4" class="HiddenDiv" >
-    <h3>Curstomers Reports</h3>
+    <h3>Customers Reports</h3>
     <div id="Div4"></div>
 </div>
 
