--- a/Views/Tv/SkuEdit.cshtml
+++ b/Views/Tv/SkuEdit.cshtml
@@ -32,7 +32,7 @@ SKU:
         <b>Buyers Notes:</b><br />
         <textarea id="BuyerNotes" name="BuyerNotes" rows="5" cols="70"></textarea>
         <br />
-
+        <input type="text" name="hiddensku" id="hiddensku" class="Hidden" />
         <div id="IsActive"></div>@*<input type="checkbox" id="IsActiveCheckBox" class="Hidden PermisionCheckbox" value="Active">
 
             <input type="number" name="IsActiveCheckBoxValue" id="IsActiveCheckBoxValue" class="Hidden"/>*@
@@ -52,6 +52,7 @@ SKU:
         <br />
         <input class="generateButton" type="submit" id="SaveSkuForm" disabled="disabled" value="Save Changes" />
     </div>
+    
 }
 </div>
 
