--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1390,3 +1390,12 @@ input.dateInput  {
   #modal_wrapper.overlay #modal_window {
     display: block;
   }
+
+  /*Sku stock level*/
+
+  .VariationBox {
+      border: 1px solid black;
+      padding: 15px;
+      width: 40%;
+      margin-left: 55px;
+  }
